# django-authenticated-crud

./: .dockerignore  .env.production.sample  .env.sample  DOCKER_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.cursor/rules/: project-pattern.md  project-scope.mdc
.github/workflows/: ci.yml  lint.yml
accounts/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: dashboard.html  login.html  register.html
accounts/templates/accounts/partials/: stats.html
core/: asgi.py  config.py  logging.py  settings.py  tests.py  urls.py  views.py  wsgi.py
core/settings/: base.py  local.py  production.py  test.py
tasks/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  test_logging.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_deleted_at_task_is_deleted.py  0003_task_due_date.py
tasks/templates/tasks/: task_list_page.html
tasks/templates/tasks/partials/: task_edit.html  task_list.html  task_row.html
templates/: base.html
