[project]
name = "django-authenticated-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["tests.py", "test_*.py", "*_test.py"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["accounts", "core"]
exclude = [
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "DJ",
    "RUF",
]
ignore = [
    "E501",
    "RUF012",
]

[tool.ruff.lint.isort]
known-first-party = ["accounts", "core"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
